@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.5 2004/07/23 05:16:00 minskim Exp $
+# $NetBSD: Makefile,v 1.6 2004/07/26 06:42:24 minskim Exp $
 
-DISTNAME=		liferea-0.5.2
+DISTNAME=		liferea-0.5.2b
 CATEGORIES=		www
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=liferea/}
 
@@ -8,10 +8,12 @@ MAINTAINER=		adam@monkeybyte.org
 HOMEPAGE=		http://liferea.sourceforge.net/
 COMMENT=		Simple FeedReader clone for reading RSS/RDF feeds
 
-GNU_CONFIGURE=          yes
-USE_BUILDLINK3=         yes
+GNU_CONFIGURE=		yes
+USE_BUILDLINK3=		yes
+USE_LIBTOOL=		yes
+SHLIBTOOL_OVERRIDE=	libtool
 USE_GNU_TOOLS+=		make
-USE_X11=                yes
+USE_X11=		yes
 USE_PKGLOCALEDIR=	yes
 
 .include "../../x11/gtk2/buildlink3.mk"
