@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.4 2004/07/23 05:16:00 minskim Exp $
+$NetBSD: distinfo,v 1.5 2004/07/26 06:42:24 minskim Exp $
 
-SHA1 (liferea-0.5.2.tar.gz) = 68ce96ac5c7669ad72c394a18cfc83c409d7e44a
-Size (liferea-0.5.2.tar.gz) = 913017 bytes
+SHA1 (liferea-0.5.2b.tar.gz) = 9f342498bc8d1c2803b45cd40d5b1efab5fcfd4b
+Size (liferea-0.5.2b.tar.gz) = 912965 bytes
